--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.30",
+    "@react-three/drei": "^9.42.2",
+    "@react-three/fiber": "^8.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,10 +14,16 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "@types/react-transition-group": "^4.4.5",
+    "@types/three": "^0.146.0",
+    "babel-plugin-relay": "^14.1.0",
+    "gl-matrix": "^3.4.3",
+    "glsl-noise": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-relay": "^14.1.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "three": "^0.146.0",
     "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +50,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-relay": "^14.1.2",
+    "babel-plugin-glsl": "^1.0.0",
+    "glslify": "^7.1.1"
   }
 }
