--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-relay": "^14.1.0",
     "gl-matrix": "^3.4.3",
     "glsl-noise": "^0.0.0",
+    "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-relay": "^14.1.0",
