--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gl-matrix": "^3.4.3",
     "glsl-noise": "^0.0.0",
     "gsap": "^3.11.3",
+    "kampos": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-relay": "^14.1.0",
@@ -26,7 +27,6 @@
     "react-scripts": "5.0.1",
     "sass": "^1.56.1",
     "three": "^0.146.0",
-    "typescript": "^4.9.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,6 +56,8 @@
   "devDependencies": {
     "@types/react-relay": "^14.1.2",
     "babel-plugin-glsl": "^1.0.0",
-    "glslify": "^7.1.1"
+    "glslify": "^7.1.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.4"
   }
 }
